Fix align form edit perfil

--- a/styles/main.css
+++ b/styles/main.css
@@ -2887,6 +2887,12 @@ input:not(:-webkit-autofill) {
   margin-top: 15px;
 }
 
+.register__editPhoto--thirdPart {
+  height: 33%;
+  margin-top: 15px;
+  visibility: hidden;
+}
+
 .register__editPhoto p {
   font-size: 0.8em;
   color: #494949;
@@ -2943,7 +2949,7 @@ input:not(:-webkit-autofill) {
 }
 
 .register__form--edit {
-  width: 100%;
+  width: 80%;
 }
 
 .register__divider {
@@ -4819,10 +4825,6 @@ input[type=number] {
   margin-left: 40px;
 }
 
-.register__icon--thirdPart {
-  width: 9%;
-}
-
 .register__icon--thirdPart img {
   width: 59px;
 }
@@ -4869,10 +4871,6 @@ input[type=number] {
   width: calc(100% - 270px);
 }
 
-.registerEdit--third {
-  width: calc(100% - 180px);
-}
-
 .croppie-container {
   position: absolute;
   top: 0;
@@ -4912,6 +4910,9 @@ input[type=number] {
   }
   .register__editPhoto--active {
     margin-bottom: 90px;
+  }
+  .register__editPhoto--thirdPart {
+    display: none;
   }
 }
 
